# goedgekeurde-vergunningen

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: generate-html.yml
data/: analyse_aandeel_flats_per_gewest.csv  analyse_renovatie_gebouwen_per_gewest.csv
docs/: index.html
docs/charts/: aandeel_flats.html  aandeel_flats_standalone.html  nieuwbouw_woningen.html  nieuwbouw_woningen_standalone.html  renovatie_gebouwen.html  renovatie_gebouwen_standalone.html
docs/css/: dashboard.css
docs/csv/: aandeel_flats_data.csv  nieuwbouw_woningen_data.csv  renovatie_gebouwen_data.csv
docs/tables/: aandeel_flats_data.html  nieuwbouw_woningen_data.html  renovatie_gebouwen_data.html
scripts/: download_data.py  generate_html.py
src/: config.py  data_utils.py
test/: test.html  test_iframe_copy.html  test_iframe_embed.html
